# clickhouse-cpp

./: .buckconfig  .clang-format  .gitignore  .travis.yml  BUCK  BUILD.bazel  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  conandata.yml  conanfile.py
.github/: CODEOWNERS
.github/workflows/: bazel.yml  cmake.yml  docs_sync.yml  docs_verify.yml  linux.yml  linux_ssl.yml  macos.yml  macos_ssl.yml  run-tests-cloud.yml  windows_mingw.yml  windows_msvc.yml
bench/: CMakeLists.txt  bench.cpp
ci/: docker-compose.yml
ci/docker-compose/: config.xml  users.xml
clickhouse/: CMakeLists.txt  async_client.cpp  async_client.h  block.cpp  block.h  clickhouse-cpp-lib-static.pc.in  clickhouse-cpp-lib.pc.in  client.cpp  client.h  columns.cpp  columns.h  error_codes.h  exceptions.h  protocol.h  query.cpp  query.h  server_exception.h  thread_safe_client.cpp  thread_safe_client.h  type_parser.cpp  type_parser.h  types.cpp  types.h  varint.h  version.h  wire_format.h
clickhouse/base/: bignum_string.h  buffer.h  byte_ring.h  coded.cpp  coded.h  coded_input.cpp  coded_input.h  compressed.cpp  compressed.h  endpoints_iterator.cpp  endpoints_iterator.h  hosts_iterator.cpp  hosts_iterator.h  input.cpp  input.h  open_telemetry.h  output.cpp  output.h  platform.h  projected_iterator.h  singleton.h  socket.cpp  socket.h  sslsocket.cpp  sslsocket.h  streamstack.h  string_utils.h  string_view.h  uuid.h  wire_format.cpp  wire_format.h
clickhouse/cityhash/: CMakeLists.txt  city.cc  city.h  city_config.h
clickhouse/columns/: array.cpp  array.h  bool.cpp  bool.h  column.cpp  column.h  date.cpp  date.h  decimal.cpp  decimal.h  enum.cpp  enum.h  factory.cpp  factory.h  geo.cpp  geo.h  ip4.cpp  ip4.h  ip6.cpp  ip6.h  itemview.cpp  itemview.h  json.cpp  json.h  lowcardinality.cpp  lowcardinality.h  lowcardinalityadaptor.h  map.cpp  map.h  nothing.h  nullable.cpp  nullable.h  numeric.cpp  numeric.h  serialization.cpp  serialization.h  string.cpp  string.h  time.cpp  time.h  (+7 more)
clickhouse/io/: coded_input.cpp  coded_input.h  input.cpp  input.h  output.cpp  output.h
clickhouse/net/: socket.cpp  socket.h
clickhouse/types/: bignum.cpp  bignum.h  int128.h  type_parser.cpp  type_parser.h  typemap.h  types.cpp  types.h
cmake/: ClickHouseClientConfig.cmake  Findabsl.cmake  Findcityhash.cmake  Findlz4.cmake  Findzstd.cmake  clickhouse-cpp-config.cmake.in  cpp11.cmake  cpp17.cmake  cpp20.cmake  openssl.cmake  subdirs.cmake  version.cmake
contrib/absl/: CMakeLists.txt
contrib/absl/absl/: CMakeLists.txt
contrib/absl/base/: policy_checks.h
contrib/absl/numeric/: int128.cc  int128.h
contrib/cityhash/: CMakeLists.txt  city.cc
contrib/cityhash/cityhash/: city.cc
contrib/gtest/: BUCK  CMakeLists.txt  README.md  gtest-all.cc
contrib/lz4/: CMakeLists.txt  lz4.c  lz4hc.c
contrib/lz4/lz4/: BUCK  CMakeLists.txt
contrib/zstd/zstd/: CMakeLists.txt
docs/: index.mdx  navigation.json
tests/helloworld/: CMakeLists.txt  main.cpp
tests/simple/: BUCK  CMakeLists.txt  main.cpp
tests/types/: CMakeLists.txt  main.cpp
ut/: BUCK  BUILD.bazel  CMakeLists.txt  ColumnLowCardinalityT_ut.cpp  ColumnString_ut.cpp  Column_ut.cpp  CreateColumnByType_ut.cpp  abnormal_column_names_test.cpp  abnormal_column_names_test.h  array_of_low_cardinality_tests.cpp  async_client_ut.cpp  bignum_round_trip.cpp  bignum_samples.cpp  bignum_samples.h  bignum_string_ut.cpp  bignum_ut.cpp  block_ut.cpp  byte_ring_ut.cpp  client_ut.cpp  column_array_ut.cpp  columns_ut.cpp  connection_failed_client_test.cpp  connection_failed_client_test.h  connection_failed_client_ut.cpp  itemview_ut.cpp  low_cardinality_nullable_tests.cpp  main.cpp  performance_tests.cpp  readonly_client_test.cpp  readonly_client_test.h  readonly_client_ut.cpp  roundtrip_column.cpp  roundtrip_column.h  roundtrip_tests.cpp  socket_ut.cpp  sparse_ut.cpp  ssl_link_ut.cpp  ssl_ut.cpp  stream_ut.cpp  tcp_server.cpp  (+13 more)
