module(name = "clickhouse_cpp", version = "2.6.1")

bazel_dep(name = "abseil-cpp", version = "20260526.0")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260526.0")
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "openssl", version = "3.5.5.bcr.4")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "zstd", version = "1.5.7.bcr.1")
