module(name = "clickhouse-cpp-client", version = "2.6.2")

# Pinned to 20260107.1, the last version that declares
# `compatibility_level = 1`, so that the module remains importable on
# Bazel < 9.1 whose bazel_tools also depends on a level-1 abseil-cpp.
# See PR discussion; the attribute is a no-op from Bazel 9.1.0 onwards.
bazel_dep(name = "abseil-cpp", version = "20260107.1")
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "boringssl", version = "0.20260526.0")
bazel_dep(name = "lz4", version = "1.10.0.bcr.1")
bazel_dep(name = "openssl", version = "3.5.5.bcr.4")
bazel_dep(name = "platforms", version = "1.1.0")
bazel_dep(name = "rules_cc", version = "0.2.19")
bazel_dep(name = "zstd", version = "1.5.7.bcr.1")

# Test-only dependencies; not pulled in by consumers of the library.
bazel_dep(name = "googletest", version = "1.17.0.bcr.2", dev_dependency = True)
